[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-rag"
version = "0.6.0"
description = "Process-aware retrieval: code-graph diffusion conditioned on event traces"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ERP•AI" }]
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "process-mining",
  "personalized-pagerank",
  "code-graph",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy >= 1.26",
  "click >= 8.1",
]

[project.urls]
Homepage = "https://www.erp.ai"
Source = "https://github.com/erphq/pm-rag"
Issues = "https://github.com/erphq/pm-rag/issues"

[project.scripts]
pm-rag = "pm_rag.cli:main"

[project.optional-dependencies]
dev = [
  "pytest >= 8.0",
  "ruff >= 0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["pm_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
